--- a/src/pages/Visit.hbs
+++ b/src/pages/Visit.hbs
@@ -14,5 +14,6 @@
       <div class="column box has-text-centered"></div>
         <h1 class="title is-4">Save your trips</h1>
          {{> VisitForm }}
+         {{> Visit-image }}
     </div>
 </div>
